Fix issue 2915 with collection icon overlapping collection type info

--- a/public/stylesheets/site/2.0/17-zone-home.css
+++ b/public/stylesheets/site/2.0/17-zone-home.css
@@ -55,6 +55,10 @@ user home, collections and challenges home, tag home, admin comms home
   float: none;
 }
 
+.home .header .type {
+  margin-left: 120px;
+}
+
 /*(no filters)*/
 
 .dashboard.collections-index .index {
